src/objects/Charm__c.object
<CustomObject>
    <label>Charm</label>
    <nameField>
        <label>Charm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Charm</relationshipLabel>
        <relationshipName>Charm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Charm</relationshipLabel>
        <relationshipName>Charm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>brand_uuid__c</fullName>
        <externalId>true</externalId>
        <label>BRAND_UUID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>brand_uuid_url__c</fullName>
        <label>BRAND_UUID _URL_</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>brand_name__c</fullName>
        <label>BRAND NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>brand_url__c</fullName>
        <label>WEBSITE</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>brand_url_url__c</fullName>
        <label>WEBSITE _URL_</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>website_description__c</fullName>
        <label>DESCRIPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ngrams__c</fullName>
        <label>KEYWORDS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>growth_score__c</fullName>
        <label>GROWTH SCORE</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sudden_growth_score__c</fullName>
        <label>GROWTH SCORE - 3 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>success_score__c</fullName>
        <label>SUCCESS SCORE</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sophistication_score__c</fullName>
        <label>SOPHISTICATION SCORE</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shopify_url__c</fullName>
        <label>SHOPIFY_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>public_phone_number__c</fullName>
        <label>PUBLIC PHONE NUMBER</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>public_email__c</fullName>
        <label>PUBLIC EMAIL ADDRESS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>contacts_count__c</fullName>
        <label>INDIVIDUAL CONTACTS IN CHARM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>contacts_with_email__c</fullName>
        <label>INDIVIDUAL CONTACTS WITH EMAIL IN CHARM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>country_code__c</fullName>
        <label>COUNTRY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>STATE/PROVINCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>town__c</fullName>
        <label>CITY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>founded__c</fullName>
        <label>FOUNDATION YEAR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>revenue_estimate__c</fullName>
        <label>REVENUE ESTIMATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>combined_revenue__c</fullName>
        <label>COMPUTED REVENUE ESTIMATE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>li_category__c</fullName>
        <label>LINKEDIN CATEGORY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>li_employees_li__c</fullName>
        <label>LINKEDIN EMPLOYEES COUNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>li_employees_li_rel_growth_3M__c</fullName>
        <label>LINKEDIN EMPLOYEES COUNT GROWTH 3M (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>li_employees_li_rel_growth_6M__c</fullName>
        <label>LINKEDIN EMPLOYEES COUNT GROWTH 6M (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>li_employees_li_rel_growth_12M__c</fullName>
        <label>LINKEDIN EMPLOYEES COUNT GROWTH 12M (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>li_employees_li_abs_growth_3M__c</fullName>
        <label>LINKEDIN EMPLOYEES COUNT GROWTH 3M</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>li_employees_li_abs_growth_6M__c</fullName>
        <label>LINKEDIN EMPLOYEES COUNT GROWTH 6M</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>li_employees_li_abs_growth_12M__c</fullName>
        <label>LINKEDIN EMPLOYEES COUNT GROWTH 12M</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>platform__c</fullName>
        <label>STORE PLATFORM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>storeproduct_product_brands_number_count__c</fullName>
        <label>BRANDS ON STORE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>storeproduct_product_products_count__c</fullName>
        <label>PRODUCTS ON STORE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>is_brickandmortar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HAS STREET ADDRESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>domain_alexa_rank__c</fullName>
        <label>ALEXA RANK</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>domainfeatures_score__c</fullName>
        <label>ALEXA RANK GROWTH SCORE</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>storeproduct_product_prices_min__c</fullName>
        <label>PRODUCT PRICE (MIN)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>storeproduct_product_prices_mean__c</fullName>
        <label>PRODUCT PRICE (AVG)</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>storeproduct_product_prices_max__c</fullName>
        <label>PRODUCT PRICE (MAX)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>storeproduct_product_creation_freq_12M__c</fullName>
        <label>NEW PRODUCTS PER MONTH</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ig_username__c</fullName>
        <label>IG USERNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ig_username_url__c</fullName>
        <label>IG USERNAME _URL_</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ig_followers_count__c</fullName>
        <label>IG FOLLOWERS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_accountfeatures_score__c</fullName>
        <label>IG GROWTH SCORE</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ig_eng_rate_factor1k__c</fullName>
        <label>IG ENGAGEMENT RATE (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ig_avg_likes__c</fullName>
        <label>LIKES PER POST (AVG)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_avg_comments__c</fullName>
        <label>COMMENTS PER POST (AVG)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_name__c</fullName>
        <label>FACEBOOK NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fb_name_url__c</fullName>
        <label>FACEBOOK NAME _URL_</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fb_follows__c</fullName>
        <label>FACEBOOK FOLLOWERS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_accountfeatures_score__c</fullName>
        <label>FACEBOOK GROWTH SCORE</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fb_category__c</fullName>
        <label>FACEBOOK CATEGORY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tiktok_username__c</fullName>
        <label>TIKTOK USERNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tiktok_username_url__c</fullName>
        <label>TIKTOK USERNAME _URL_</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tiktok_followers_count__c</fullName>
        <label>TIKTOK FOLLOWERS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>tiktokaccountfeatures_score__c</fullName>
        <label>TIKTOK GROWTH SCORE</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>twitter_username__c</fullName>
        <label>TWITTER USERNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>twitter_username_url__c</fullName>
        <label>TWITTER USERNAME _URL_</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>twitter_followers_count__c</fullName>
        <label>TWITTER FOLLOWERS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>twitteraccountfeatures_score__c</fullName>
        <label>TWITTER GROWTH SCORE</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crunchbase_funding_total__c</fullName>
        <label>CRUNCHBASE MONEY RAISED</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>crunchbase_funding_rounds__c</fullName>
        <label>CRUNCHBASE NUMBER OF FUNDING ROUNDS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>on_yelp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ON YELP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>techs__c</fullName>
        <label>ALL TECHNOLOGIES</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>techs_email_marketing__c</fullName>
        <label>EMAIL MARKETING</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>techs_product_reviews__c</fullName>
        <label>PRODUCT REVIEWS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>techs_customer_support__c</fullName>
        <label>CUSTOMER SUPPORT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>store_count__c</fullName>
        <label>ONLINE RESELLERS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>features_score__c</fullName>
        <label>ONLINE RESELLERS GROWTH SCORE</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>has_amazon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ON AMAZON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_etsy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ON ETSY STORE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>etsy_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETSY ONLY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>etsyfeatures_score__c</fullName>
        <label>ETSY GROWTH SCORE</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>has_nordstrom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ON NORDSTROM STORE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_thrivemarket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ON THRIVE MARKET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>generic_reseller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RESELLS GENERIC PRODUCTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_ads_ad_count_unique__c</fullName>
        <label>FACEBOOK ADS COUNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_adsfeatures_score__c</fullName>
        <label>FACEBOOK ADS GROWTH SCORE</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fb_ads_latest__c</fullName>
        <label>LATEST AD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fb_ads_oldest__c</fullName>
        <label>OLDEST AD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fb_ads_renew_time_mu__c</fullName>
        <label>DAYS BETWEEN NEW CREATIVES (AVG)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>domain_alexa_rank_avg_3M__c</fullName>
        <label>WEBSITE RANK AVERAGE 3 MONTHS</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>keyword_hits__c</fullName>
        <label>KEYWORD HITS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>domain_alexa_rank_rel_growth_1M__c</fullName>
        <label>WEBSITE RANK REL 1 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>domain_alexa_rank_abs_growth_1M__c</fullName>
        <label>WEBSITE RANK ABS 1 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>domain_alexa_rank_rel_growth_2M__c</fullName>
        <label>WEBSITE RANK REL 2 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>domain_alexa_rank_abs_growth_2M__c</fullName>
        <label>WEBSITE RANK ABS 2 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>domain_alexa_rank_rel_growth_3M__c</fullName>
        <label>WEBSITE RANK REL 3 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>domain_alexa_rank_abs_growth_3M__c</fullName>
        <label>WEBSITE RANK ABS 3 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_followers_count_rel_growth_1M__c</fullName>
        <label>IG FOLLOWERS COUNT REL 1 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_followers_count_abs_growth_1M__c</fullName>
        <label>IG FOLLOWERS COUNT ABS 1 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_followers_count_rel_growth_3M__c</fullName>
        <label>IG FOLLOWERS COUNT REL 3 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_followers_count_abs_growth_3M__c</fullName>
        <label>IG FOLLOWERS COUNT ABS 3 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_followers_count_rel_growth_12M__c</fullName>
        <label>IG FOLLOWERS COUNT REL 12 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_followers_count_abs_growth_12M__c</fullName>
        <label>IG FOLLOWERS COUNT ABS 12 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_avg_comments_rel_growth_1M__c</fullName>
        <label>IG AVG COMMENTS/POST REL 1 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_avg_comments_abs_growth_1M__c</fullName>
        <label>IG AVG COMMENTS/POST ABS 1 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_avg_comments_rel_growth_3M__c</fullName>
        <label>IG AVG COMMENTS/POST REL 3 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_avg_comments_abs_growth_3M__c</fullName>
        <label>IG AVG COMMENTS/POST ABS 3 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_avg_comments_rel_growth_12M__c</fullName>
        <label>IG AVG COMMENTS/POST REL 12 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_avg_comments_abs_growth_12M__c</fullName>
        <label>IG AVG COMMENTS/POST ABS 12 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_avg_likes_rel_growth_1M__c</fullName>
        <label>IG AVG LIKES/POST REL 1 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_avg_likes_abs_growth_1M__c</fullName>
        <label>IG AVG LIKES/POST ABS 1 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_avg_likes_rel_growth_3M__c</fullName>
        <label>IG AVG LIKES/POST REL 3 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_avg_likes_abs_growth_3M__c</fullName>
        <label>IG AVG LIKES/POST ABS 3 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_avg_likes_rel_growth_12M__c</fullName>
        <label>IG AVG LIKES/POST REL 12 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_avg_likes_abs_growth_12M__c</fullName>
        <label>IG AVG LIKES/POST ABS 12 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_eng_rate_factor1k_rel_growth_1M__c</fullName>
        <label>IG ENGAGEMENT RATE REL 1 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_eng_rate_factor1k_abs_growth_1M__c</fullName>
        <label>IG ENGAGEMENT RATE ABS 1 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_eng_rate_factor1k_rel_growth_3M__c</fullName>
        <label>IG ENGAGEMENT RATE REL 3 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_eng_rate_factor1k_abs_growth_3M__c</fullName>
        <label>IG ENGAGEMENT RATE ABS 3 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_eng_rate_factor1k_rel_growth_12M__c</fullName>
        <label>IG ENGAGEMENT RATE REL 12 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_eng_rate_factor1k_abs_growth_12M__c</fullName>
        <label>IG ENGAGEMENT RATE ABS 12 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_posts_count__c</fullName>
        <label>IG POSTS COUNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_posts_count_rel_growth_1M__c</fullName>
        <label>IG POSTS COUNT REL 1 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_posts_count_abs_growth_1M__c</fullName>
        <label>IG POSTS COUNT ABS 1 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_posts_count_rel_growth_3M__c</fullName>
        <label>IG POSTS COUNT REL 3 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_posts_count_abs_growth_3M__c</fullName>
        <label>IG POSTS COUNT ABS 3 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>ig_posts_count_rel_growth_12M__c</fullName>
        <label>IG POSTS COUNT REL 12 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ig_posts_count_abs_growth_12M__c</fullName>
        <label>IG POSTS COUNT ABS 12 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>store_rel_growth_1M__c</fullName>
        <label>ONLINE RESELLERS COUNT REL 1 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>store_abs_growth_1M__c</fullName>
        <label>ONLINE RESELLERS COUNT ABS 1 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>store_rel_growth_3M__c</fullName>
        <label>ONLINE RESELLERS COUNT REL 3 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>store_abs_growth_3M__c</fullName>
        <label>ONLINE RESELLERS COUNT ABS 3 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>store_rel_growth_12M__c</fullName>
        <label>ONLINE RESELLERS COUNT REL 12 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>store_abs_growth_12M__c</fullName>
        <label>ONLINE RESELLERS COUNT ABS 12 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_follows_rel_growth_1M__c</fullName>
        <label>FACEBOOK FOLLOWERS REL 1 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fb_follows_abs_growth_1M__c</fullName>
        <label>FACEBOOK FOLLOWERS ABS 1 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_follows_rel_growth_3M__c</fullName>
        <label>FACEBOOK FOLLOWERS REL 3 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fb_follows_abs_growth_3M__c</fullName>
        <label>FACEBOOK FOLLOWERS ABS 3 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_follows_rel_growth_12M__c</fullName>
        <label>FACEBOOK FOLLOWERS REL 12 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fb_follows_abs_growth_12M__c</fullName>
        <label>FACEBOOK FOLLOWERS ABS 12 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_likes__c</fullName>
        <label>FACEBOOK LIKES</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_likes_rel_growth_1M__c</fullName>
        <label>FACEBOOK LIKES REL 1 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fb_likes_abs_growth_1M__c</fullName>
        <label>FACEBOOK LIKES ABS 1 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_likes_rel_growth_3M__c</fullName>
        <label>FACEBOOK LIKES REL 3 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fb_likes_abs_growth_3M__c</fullName>
        <label>FACEBOOK LIKES ABS 3 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_likes_rel_growth_12M__c</fullName>
        <label>FACEBOOK LIKES REL 12 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fb_likes_abs_growth_12M__c</fullName>
        <label>FACEBOOK LIKES ABS 12 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_ads_ad_count_rel_growth_1M__c</fullName>
        <label>FACEBOOK ADS REL 1 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fb_ads_ad_count_abs_growth_1M__c</fullName>
        <label>FACEBOOK ADS ABS 1 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_ads_ad_count_rel_growth_3M__c</fullName>
        <label>FACEBOOK ADS REL 3 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fb_ads_ad_count_abs_growth_3M__c</fullName>
        <label>FACEBOOK ADS ABS 3 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_ads_ad_count_rel_growth_12M__c</fullName>
        <label>FACEBOOK ADS REL 12 MONTH (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fb_ads_ad_count_abs_growth_12M__c</fullName>
        <label>FACEBOOK ADS ABS 12 MONTH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
    <fields>
        <fullName>fb_ads_ad_count__c</fullName>
        <label>FACEBOOK ADS COUNT ALL TIME</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <defaultValue>0</defaultValue>
    </fields>
</CustomObject>