src/objects/Charm__c/fields/li_employees_linkedin__c.field-meta.xml
<CustomField>
    <fullName>li_employees_linkedin__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LINKEDIN EMPLOYEES COUNT</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>